update cache repository